Add more non-source files to .gitignore
Signed-off-by: Petr Tesarik <petr@tesarici.cz>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+# editor-generated files
+*~
+*.swp
+
+# Jekyll files
 _site/
-.sass-cache/
 .jekyll-cache/
 .jekyll-metadata
+
+# Ruby files
+.bundle
+Gemfile.lock
 vendor/
+
+# Other tools
+.sass-cache/
