--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: SIGILLatum
 description: Petr Tesarik's Linux blog
 author: Petr Tesařík
 email: ptesarik@suse.com
+logo: /assets/sigill.png
 url: "https://SIGILLatum.tesarici.cz"
 github_url: "https://github.com/ptesarik/SIGILLatum.github.io"
 
